Initial alpha release

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "convert"
   ],
   "activationCommands": {
-    "atom-workspace": "pandocia:toggle"
+    "atom-workspace": "pandocia:convert"
   },
   "repository": "https://github.com/WispOfTheWinds/pandocia",
   "license": "MIT",
